feat: Add additional transports and pydanticAI Agent MCP demo

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ EMBEDDING_MODEL=text-embedding-3-small
 # Server configuration
 MCP_SERVER_HOST=0.0.0.0
 MCP_SERVER_PORT=8000
+
+# Logfire configuration
+LOGFIRE_TOKEN=your_logfire_token_here
