--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "python-dotenv>=1.1.0",
     "watchdog>=6.0.0",
     "logfire>=3.14.0",
+    "tiktoken>=0.9.0",
+    "numpy>=2.2.4",
 ]
 
 [project.optional-dependencies]
