--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ MCP_SERVER_PORT=8000
 
 # Logfire configuration
 LOGFIRE_TOKEN=your_logfire_token_here
+
+# Path configurations (optional - if not set, defaults in app/config.py will be used)
+# CHROMA_PATH=/path/to/your/chroma/directory
+# KNOWLEDGE_BASE_PATH=/path/to/your/knowledge_base/directory
+# ACTIVE_KNOWLEDGE_PATH=/path/to/your/knowledge_base/active/directory
