--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ dependencies = [
     "logfire>=3.14.0",
     "tiktoken>=0.9.0",
     "numpy>=2.2.4",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
+    "pytest-timeout>=2.3.1",
 ]
 
 [project.optional-dependencies]
