tests: More testing improvements for Chunking,  Embedder, Sync, Tools

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,5 +6,6 @@ python_functions = test_*
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     integration: marks tests as integration tests (deselect with '-m "not integration"')
+    real_tokenization: marks tests that use real tokenizers but don't need API credentials
 
-addopts = --verbose 
+addopts = --verbose   
